--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.8.0",
+    "oracledb": "^5.5.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.10"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.7",
